--- a/rms-main/src/main/resources/application.properties
+++ b/rms-main/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=rms
+spring.application.name=rms-main
 spring.datasource.url=jdbc:mysql://localhost:3306/db_rms
 spring.datasource.username=root
 spring.datasource.password=28042004
