--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
     <groupId>com.example</groupId>
     <artifactId>rms</artifactId>
     <version>0.0.1-SNAPSHOT</version>
+    <packaging>pom</packaging>
     <name>rms</name>
     <description>Demo project for Spring Boot</description>
     <url/>
@@ -20,6 +21,14 @@
     <developers>
         <developer/>
     </developers>
+    <modules>
+        <module>rms-main</module>
+        <module>customer-module</module>
+        <module>menu-module</module>
+        <module>order-module</module>
+        <module>billing-module</module>
+        <module>table-management-module</module>
+    </modules>
     <scm>
         <connection/>
         <developerConnection/>
@@ -65,13 +74,6 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
-        <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
-            <version>8.0.24</version>
-            <scope>runtime</scope>
-        </dependency>
-
 		<dependency>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-data-jpa</artifactId>
